tests/NormalTests/paczka1/fuzzy1/30783567.err
Error in line 2: F1b27ZTz6 S299 3,5
Error in line 4: Ab5XK S671 32,1
Error in line 9: bTIp S671 5,8
Error in line 3: F1b27ZTz6 S671 85,8
Error in line 26: A989 S>71 >0,1
Error in line 37: F1b27ZTz6 S671 36,8
